ada php ini setting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
             - linux_gaboot
         volumes:
             - .:/var/www/html
+            - ./server/php/php.ini-production:/usr/local/etc/php/php.ini-development
+            - ./server/php/php.ini-production:/usr/local/etc/php/php.ini-production
+            - ./server/php/php.ini:/usr/local/etc/
         ports:
             - 9000:9000
     nginx:
@@ -23,7 +26,7 @@ services:
             - 8143:8143
         volumes:
             - .:/var/www/html
-            - ./nginx:/etc/nginx/conf.d/
+            - ./server/nginx:/etc/nginx/conf.d/
         networks:
             - linux_gaboot
         depends_on:
