--- a/.env.dev
+++ b/.env.dev
@@ -1,19 +1,19 @@
 APP_NAME=Enthusiart
-APP_ENV=development
+APP_ENV=production
 APP_KEY=base64:v0XkUXhRNotqqyO7YbMNHka//NKFom49HJyGaEvGAtI=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=https://enthusiart.rena.my.id
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=localhost
-DB_PORT=5432
+DB_CONNECTION=mysql
+DB_HOST=enthusiart-database
+DB_PORT=3306
 DB_DATABASE=enthusiart
-DB_USERNAME=postgres
-DB_PASSWORD=030023
+DB_USERNAME=admin
+DB_PASSWORD=admin1234
 
 MIDTRANS_MERCHANT_ID=G322518554
 MIDTRANS_CLIENT_KEY=SB-Mid-client-h-fnl4UrbkxedLCZ
