--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -57,7 +57,7 @@ jobs:
         run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "sudo chmod -R 775 /var/www/enthusiart/storage /var/www/enthusiart/bootstrap/cache"
 
       - name: Build and start Docker containers
-        run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "sudo cd /var/www/enthusiart && sudo docker compose up --build -d"
+        run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "cd /var/www/enthusiart && sudo docker compose up --build -d"
 
       - name: Restart Nginx
         run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "sudo cp /var/www/enthusiart/enthusiart.conf /etc/nginx/sites-available/enthusiart.conf"
